--- a/src/locales/cs-CZ.json
+++ b/src/locales/cs-CZ.json
@@ -1,19 +1,41 @@
 {
-	"lib": {
-		"components": {
-			"sidebar": {},
-			"ribbon": {},
-			"header_menu": {},
-			"input_placeholder": {}
-		}
+	"components" : {
+		"sidebar" : {},
+		"ribbon" : {},
+		"header_menu" : {}
 	},
 
-	"routes": {
-		"prodej_zakaznici": {
-			"tabs": {},
-			"ag_grid_header": {},
-			"customer_detail": {},
-			"address_detail": {}
+	"routes" : {
+		"prodej" : {
+			"zakaznici" : {
+				"ag_grid_header" : {},
+				"customer_detail" : {
+					"label" : "Detail zákazníka",
+					"new_customer_form": {
+						"label_customer" : "Nový kontakt zákazníka",
+						"label_address" : "Nový kontakt prodejny",
+						"fields" : {
+							"name" : "Jméno",
+							"last_name" : "Příjmení",
+							"phone" : "Mobil",
+							"landline" : "Pevná linka",
+							"email" : "E-mail",
+							"note" : "Poznámka",
+							"is_default" : "Výchozí",
+							"is_active" : "Aktivní",
+							"send_invoice_in_pdf" : "FA e-mailem v PDF",
+							"send_invoice_in_csv" : "FA e-mailem v CSV",
+							"send_dl_in_pdf" : "DL e-mailem v PDF",
+							"send_dl_in_csv" : "DL e-mailem v CSV",
+							"az_svoz" : "AZ o svozu zásilky",
+							"az_expedice" : "AZ o expedici zásilky"
+						}
+					}
+				},
+				"adress_detail" : {},
+				"tabs" : {}
+			}
 		}
+
 	}
 }
