--- a/src/locales/cz.json
+++ b/src/locales/cz.json
@@ -77,6 +77,7 @@
 	},
 
 
+	"test" : "haha",
 
 	"routes" : {
 		"test" : {
@@ -166,6 +167,7 @@
 
 				"address_detail" : {
 					"header" : "Prodejny zákazníka { customerName } ({ customerNodeCode })",
+					"header_err" : "Prodejny zákazníka",
 					"autoform" : {
 						"section_addressDetail" : "Detail adresy",
 						"name" : "Jméno",
