feat(customers): collecting edited data, contacts ag grid table

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -15,7 +15,11 @@
 
 
 	"components" : {
-		"sidebar" : {},
+		"sidebar" : {
+			"all" : "All",
+			"recent" : "Recent",
+			"favorite" : "Favorite"
+		},
 		"ribbon" : {},
 		"header_menu" : {}
 	},
