--- a/src/locales/cz.json
+++ b/src/locales/cz.json
@@ -217,8 +217,8 @@
 					"name" : "Jméno",
 					"surname" : "Příjmení",
 					"mobile" : "Mobil",
-					"phone" : "<span class=\"whitespace-nowrap\">Pevná linka</span>",
-					"email" : "<span class=\"whitespace-nowrap\">E-mail</span>",
+					"phone" : "Pevná linka",
+					"email" : "E-mail",
 					"note" : "Poznámka",
 					"isDefault" : "Výchozí",
 					"enabled" : "Aktivní",
