--- a/docs/weekly/week-15-2025.md
+++ b/docs/weekly/week-15-2025.md
@@ -20,6 +20,7 @@
 ### Update
 - `AgGridSSWrapper`
   - adjustments of `richCellTextEditor` and `setFilter`, bacause setting to default colDefs and loading saved preset caused fetch of select options to fail
+
 ### Bug fix
 - **Sidebar category icon** fixed
   - root of issue not found, but implemented workaround using if condiitions
@@ -44,8 +45,12 @@
 
 ## Thu 10.04.2025
 
+### Bug fixes
+- `FilterAndPresetButtons`
+  - buttons were showing 
 
 ---
 
 
 ## Fri 11.04.2025
+ 
