--- a/docs/weekly/week-15-2025.md
+++ b/docs/weekly/week-15-2025.md
@@ -8,6 +8,7 @@
 - **Closed `sidebar` navigation** with popovers
   - shadcn doesn't have a default closed sidebar navigation
 
+
 ---
 
 
@@ -46,11 +47,20 @@
 ## Thu 10.04.2025
 
 ### Bug fixes
+
 - `FilterAndPresetButtons`
-  - buttons were showing 
+  - buttons were showing incorrectly on selected preset/selected filter
+  - refactor of preset and filter selection -> faster runtime for presets
+
 
 ---
 
 
 ## Fri 11.04.2025
- 
+
+### Update
+
+- Mobile css adjustments
+- `Autoform` 
+  - component refactor because some effects were running twice
+  - code cleanup into components
