feat: autoform detail page chevrons

--- a/docs/weekly/week-15-2025.md
+++ b/docs/weekly/week-15-2025.md
@@ -3,7 +3,7 @@
 
 ## Mon 07.04.2025
 
-### New feature
+### New
 
 - Current loaded input params are now displayed in `InputParams` component
 - **Closed `sidebar` navigation** with popovers
@@ -15,7 +15,7 @@
 
 ## Tue 08.04.2025
 
-### New feature
+### New
 - **Logout endpoint in form actions**
   - Implemented `/logout` API endpoint 
 
@@ -23,7 +23,7 @@
 - `AgGridSSWrapper`
   - adjustments of `richCellTextEditor` and `setFilter`, bacause setting to default colDefs and loading saved preset caused fetch of select options to fail
 
-### Bug fix
+### Fix
 - **Sidebar category icon** fixed
   - root of issue not found, but implemented workaround using if condiitions
 
@@ -33,11 +33,11 @@
 
 ## Wed 09.04.2025
 
-### New feature
+### New 
 - **Redirects on unsuccesfull detail page loads**
   - If api returns 404, redirect to page with main list with encoded error in url
 
-### Updated
+### Update
 - `AgGridSSWrapper` 
   - prevent datasource registration before valid input params were selected
 
@@ -47,7 +47,7 @@
 
 ## Thu 10.04.2025
 
-### Bug fixes
+### Fix
 
 - `FilterAndPresetButtons`
   - buttons were showing incorrectly on selected preset/selected filter
