--- a/docs/weekly/week-16-2025.md
+++ b/docs/weekly/week-16-2025.md
@@ -3,12 +3,16 @@
 
 ## Mon 14.04.2025
 
-### Updates
+### New
+- `DndColumn` chevrons
+  - Autoform sections now have **chevrons next to labels** to indicate open state
+
+### Update
 - locale switcher in `SidebarAvatar`
-  - after migration from paraglide-svelte to paraglide-js needed to refactor logic behind switching locale
+  - after migration **from paraglide-svelte to paraglide-js** needed to refactor logic behind switching locale
   - route localization definitions now in `vite.config.ts`
 
-### Bug fixes
+### Fix
 - tabs in `prodej/zakaznici +layout.svelte` fixed, because incorrect value was set on detail pages 
 
 
