refactor: input params using callbacks instead of bindings

--- a/docs/weekly/week-16-2025.md
+++ b/docs/weekly/week-16-2025.md
@@ -14,12 +14,20 @@
 
 ### Fix
 - tabs in `prodej/zakaznici +layout.svelte` fixed, because incorrect value was set on detail pages 
+- resolved `InputParams` *ownership_invalid_mutation* errors
 
 
 ---
 
 
 ## Tue 15.04.2025
+
+### New
+- `InputParams` has fixed footer row
+
+### Update
+- `InputParams` now uses **callbacks** instead of bindings
+  - prevents *ownership_invalid_mutation* errors and sideeffects
 
 
 ---
