--- a/docs/weekly/week-16-2025.md
+++ b/docs/weekly/week-16-2025.md
@@ -26,7 +26,7 @@
 - `InputParams` has fixed footer row
 
 ### Update
-- `InputParams` now uses **callbacks** instead of bindings
+- `InputParams` now in columnFilters uses **callbacks** instead of bindings
   - prevents *ownership_invalid_mutation* errors and sideeffects
 
 
@@ -35,14 +35,19 @@
 
 ## Wed 16.04.2025
 
+### New
+- **sales analytics** table discussion
+
+### Update
+- `InputParams` now in inputs and fulltext uses **callbacks** 
 
 ---
 
 
 ## Thu 17.04.2025
 
-
----
-
-
-## Fri 18.04.2025
+### Bug
+- `AgGrid` columns defined in the same group but split in definitions **cannot be dragged** into other parts of the group. 
+  - happens because ag grid generates unique colIds that cannot be overwritten
+  - find out if thats and issue
+  - *solution:* define it in one group and then sort it in onMount -> downside - extra processing when large amount of columns
