fix: input params date picker, sidebar filtering

--- a/docs/weekly/week-17-2025.md
+++ b/docs/weekly/week-17-2025.md
@@ -9,17 +9,21 @@
 ### Update 
 - `AgGrid` changes: 
   - smaller header text in ag grid tables
-  - refactor of storing and selecting presets: changed from `getColumnDefs()` to `getColumnState()`
+  - **refactor of storing and selecting presets**: changed from `getColumnDefs()` to `getColumnState()`
     - columnState includes everything needed for tracking column widths, order, sort, etc,
     - no need to map it from columnDefinitions now
 
 ### Fix
 - navigation issue in `/prodej/zakaznici` detail pages fixed
+- `Sidebar` **filtering in children** fixed
+- input params `InputDialogColumnFilterWrapper` **date type** fixed
+
 
 ---
 
 
 ## Wed 24.04.2025
+
 
 ---
 
