feat: input params refactor finished, ag grid stop editing on focus out

--- a/docs/weekly/week-17-2025.md
+++ b/docs/weekly/week-17-2025.md
@@ -24,7 +24,17 @@
 
 ## Wed 24.04.2025
 
+### New
+- `InputParams` clear button added
+- `AgGrid` cell now looses focus and stops editing on grid outside click
+- Sidebar rail instead of sidebar trigger button
 
+### Update
+- `InputParams` issues resolved:
+  - `ColumnFilterTypeEnum` now correctly provides both **async and non async select options**, implemented **onChange** function
+  - `ColumnFilterTypeDate` implemented **onChange**, resolved infinite loop issue
+  - `InputDialogColumnFilterFieldSelect` implemented **type guards** and conditional deleting values on field change
+	
 ---
 
 
