feat: table settings finished, cs table excel import; fix: double data fetching cs table

--- a/docs/weekly/week-17-2025.md
+++ b/docs/weekly/week-17-2025.md
@@ -26,22 +26,32 @@
 
 ### New
 - `InputParams` clear button added
-- `AgGrid` cell now looses focus and stops editing on grid outside click
 - Sidebar rail instead of sidebar trigger button
 
 ### Update
 - `InputParams` issues resolved:
   - `ColumnFilterTypeEnum` now correctly provides both **async and non async select options**, implemented **onChange** function
   - `ColumnFilterTypeDate` implemented **onChange**, resolved infinite loop issue
-  - `InputDialogColumnFilterFieldSelect` implemented **type guards** and conditional deleting values on field change
 	
 ---
 
 
 ## Thu 25.04.2025
 
+### New
+- `AgGrid` cell now looses focus and stops editing on grid outside click
+
+### Update
+- `InputParams`:
+	- `InputDialogColumnFilterFieldSelect` implemented **type guards** and conditional deleting values on field change
 
 ---
 
 
 ## Fri 26.04.2025
+
+### New
+- `/nastaveni` table settings setup
+  - setting of tables properties using sliders
+  - preset buttons and custom setting
+  - instant preview with dummy table
