feat: printerService init, input params controlled by pageMetaData, ag grid refresh button

--- a/docs/weekly/2025/week-18-2025.md
+++ b/docs/weekly/2025/week-18-2025.md
@@ -39,3 +39,12 @@
 ---
 
 ## Wed 30.04.2025
+
+### New
+- created `printerService` in `$lib/api/documents` -> JSPrintManager init
+  - initializes **connection between localhost and JSPM**
+  - function that returns all printers and logs printer info in `/printer`
+- `InputParams` **fulltext and columnList** are now controlled by `pageMetaData` from page loads
+- `AgGridSSWrapper` show **refresh data button**
+  - change followed after implementing columnList in requests for table data 
+  - if column was shown with not loaded data, then show button that *allows user to refresh data* with that column
