feat: refresh data on client, bottom row with total/selected rows

--- a/docs/weekly/2025/week-19-2025.md
+++ b/docs/weekly/2025/week-19-2025.md
@@ -3,18 +3,31 @@
 
 ## Mon 05.05.2025
 
-
 ### New
 - **AgGrid and AgCharts** licence added
 
 ### Fix
 - AgGrid `loadThemeGoogleFonts` warnings resolved
+
+
 ---
+
 
 ## Tue 06.05.2025
 
+### New 
+- `AgGridCSWrapper` 
+  - refresh data button
+  - bottom row `statusBar` including **all-filtered/selected** rowCount
+- `AgGridSSWrapper` created custom status bar component
+  - `SSTotalRowsStatusBar` now displays **total row count** returned from api
+
+### Fix 
+- `AgGridSSWrapper` selection state fixed
 ---
 
+
 ## Wed 07.05.2025
+
 
 ---
