feat: no auth exp; refactor: input params opening logic, ss ag grid wrapper

--- a/docs/weekly/2025/week-19-2025.md
+++ b/docs/weekly/2025/week-19-2025.md
@@ -24,10 +24,23 @@
 
 ### Fix 
 - `AgGridSSWrapper` selection state fixed
+
+
 ---
 
 
 ## Wed 07.05.2025
+
+### Update
+- beginning of `AgGridSSWrapper` full refactor
+  - registered datasource
+  - recent filters moved to table instance
+  - grid dependencies now managed by class
+- no expiration time for `auth` cookie 
+- `InputParams` opening logic refactor
+
+### Fix
+- selected rows in `AgGridSSWrapper` fixed, navigation to detail pages restored
 
 
 ---
