feat: printer dialog, analyza-prodeju show detail table divisions

--- a/docs/weekly/2025/week-20-2025.md
+++ b/docs/weekly/2025/week-20-2025.md
@@ -20,11 +20,16 @@
 
 ## Thu 15.05.2025
 
+### Update
+- `AgGridCSWrapper` refactor finished
 
 ---
 
 
 ## Fri 16.05.2025
 
+### Update
+- `AgGridCSSecondaryWrapper` refactor finished
+- `Autoform` refactor finished
 
 ---
