feat: finished analyza-prodeju/celkem definitions, created table SalesCustomdetailByCustomers

--- a/docs/weekly/2025/week-21-2025.md
+++ b/docs/weekly/2025/week-21-2025.md
@@ -23,8 +23,15 @@
 ---
 
 
-## Tue 20.5.2025
+## Tue 20.05.2025
 
 ### New
 
 - `PrinterDialog` component layout 
+
+---
+
+## Wed 21.05.2025 - Fri 23.05.2025
+
+- `prodej/analyza-prodeju/celkem` page setup
+- created table `SalesTotalByDivision`
