double click redirect with input params, page headers

--- a/docs/weekly/2025/week-22-2025.md
+++ b/docs/weekly/2025/week-22-2025.md
@@ -23,3 +23,20 @@
 ### Fix
 
 - **saving filters and present** for cs tables caused table to crash 
+
+
+---
+
+## Wed 28.05.2025
+
+
+### New 
+
+- double click in `prodej/analyza-prodeju/celkem` redirects to `prodej/analyza-prodeju/po-zakaznicich`
+  - SalesCustomdetailByCustomers table definition and api connection finished
+
+
+### Update
+
+- aggregation section in sidebar - columns is now hidden
+- ag grids `grandTotalRow` background-color changed 
